@@ -38,6 +38,7 @@
  * 18-Jan-2007 : Added many new tests (DG);
  * 23-Apr-2008 : Added testPublicCloneable() (DG);
  * 03-Feb-2009 : Added testFindRangeBounds() (DG);
+ * 
  */
 
 package org.jfree.chart.renderer.category.junit;
@@ -69,10 +70,11 @@ public class StackedBarRenderer3DTests extends TestCase {
      * Provide access to protected method.
      */
     static class MyRenderer extends StackedBarRenderer3D {
-        public static List createStackedValueList(CategoryDataset dataset,
-            Comparable category, double base, boolean asPercentages) {
-            return StackedBarRenderer3D.createStackedValueList(dataset,
-                    category, base, asPercentages);
+        public List createStackedValueList(CategoryDataset dataset,
+                Comparable category, int[] includedRows, double base,
+                boolean asPercentages) {
+            return super.createStackedValueList(dataset, category,
+                    includedRows, base, asPercentages);
         }
     }
 
@@ -199,7 +201,8 @@ public class StackedBarRenderer3DTests extends TestCase {
     public void testCreateStackedValueList1() {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(1.0, "s0", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0 }, 0.0, false);
         assertEquals(2, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(1.0), ((Object[]) l.get(1))[1]);
@@ -211,7 +214,8 @@ public class StackedBarRenderer3DTests extends TestCase {
     public void testCreateStackedValueList2() {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(-1.0, "s0", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0 }, 0.0, false);
         assertEquals(2, l.size());
         assertEquals(new Double(-1.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -223,7 +227,8 @@ public class StackedBarRenderer3DTests extends TestCase {
     public void testCreateStackedValueList3() {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(0.0, "s0", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0 }, 0.0, false);
         assertEquals(2, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -235,7 +240,8 @@ public class StackedBarRenderer3DTests extends TestCase {
     public void testCreateStackedValueList4() {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(null, "s0", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0 }, 0.0, false);
         assertEquals(0, l.size());
     }
 
@@ -246,7 +252,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(1.0, "s0", "c0");
         d.addValue(1.1, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(1.0), ((Object[]) l.get(1))[1]);
@@ -260,7 +268,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(1.0, "s0", "c0");
         d.addValue(-1.1, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(-1.1), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -274,7 +284,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(1.0, "s0", "c0");
         d.addValue(0.0, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(1.0), ((Object[]) l.get(1))[1]);
@@ -288,7 +300,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(1.0, "s0", "c0");
         d.addValue(null, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(2, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(1.0), ((Object[]) l.get(1))[1]);
@@ -301,7 +315,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(-1.0, "s0", "c0");
         d.addValue(1.1, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(-1.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -315,7 +331,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(-1.0, "s0", "c0");
         d.addValue(-1.1, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(-2.1), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(-1.0), ((Object[]) l.get(1))[1]);
@@ -329,7 +347,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(-1.0, "s0", "c0");
         d.addValue(0.0, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(-1.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -343,7 +363,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(-1.0, "s0", "c0");
         d.addValue(null, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(2, l.size());
         assertEquals(new Double(-1.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -356,7 +378,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(0.0, "s0", "c0");
         d.addValue(1.1, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -370,7 +394,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(0.0, "s0", "c0");
         d.addValue(-1.1, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(-1.1), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -384,7 +410,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(0.0, "s0", "c0");
         d.addValue(0.0, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -398,7 +426,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         DefaultCategoryDataset d = new DefaultCategoryDataset();
         d.addValue(0.0, "s0", "c0");
         d.addValue(null, "s1", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1 }, 0.0,
+                false);
         assertEquals(2, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(0.0), ((Object[]) l.get(1))[1]);
@@ -412,7 +442,9 @@ public class StackedBarRenderer3DTests extends TestCase {
         d.addValue(1.0, "s0", "c0");
         d.addValue(null, "s1", "c0");
         d.addValue(2.0, "s2", "c0");
-        List l = MyRenderer.createStackedValueList(d, "c0", 0.0, false);
+        MyRenderer r = new MyRenderer();
+        List l = r.createStackedValueList(d, "c0", new int[] { 0, 1, 2 }, 0.0,
+                false);
         assertEquals(3, l.size());
         assertEquals(new Double(0.0), ((Object[]) l.get(0))[1]);
         assertEquals(new Double(1.0), ((Object[]) l.get(1))[1]);
